--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "antd": "^4.2.5",
-    "firebase": "^7.14.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "reactfire": "^2.0.3",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -26,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "firebase use todolist-qap && npm run build && firebase deploy --only hosting"
+    "deploy": "firebase use tadeasapp && npm run build && firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": "react-app"
