--- a/.gitignore
+++ b/.gitignore
@@ -10,27 +10,25 @@
 
 # next.js
 /.next/
-/out/
-
-# production
-/build
+/dist/
 
 # misc
 .DS_Store
 *.pem
+tsconfig.tsbuildinfo
+/.idea/
+/.firebase/
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
