--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "rm -rf dist/ && node ./scripts/pre-deploy.js && next build && next export -o dist/",
     "lint": "next lint"
   },
   "dependencies": {
