--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "1.0.0-beta.9",
+    "firebase": "^9.9.2",
     "next": "12.2.4",
+    "next-themes": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
