--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.9",
     "firebase": "^9.9.2",
+    "lodash": "^4.17.21",
+    "nanoid": "^4.0.0",
     "next": "12.2.4",
     "next-themes": "^0.2.0",
     "react": "18.2.0",
@@ -19,6 +21,7 @@
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "@types/node": "18.6.4",
     "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
