--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,21 @@
 {
-  "name": "Tadeas",
-  "short_name": "Tadeas",
-  "icons": [
-    {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ],
-  "start_url": "/?source=pwa",
-  "background_color": "#000000",
-  "display": "standalone",
-  "scope": "/",
-  "theme_color": "#000000",
-  "description": "A to-do list app by Teno Fdio Team"
+    "name": "Tadeas",
+    "short_name": "Tadeas",
+    "description": "A to-do list app by Teno Fdio Team",
+    "icons": [
+        {
+            "src": "/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "theme_color": "#2c2131",
+    "background_color": "#2c2131",
+    "display": "standalone",
+    "scope": "/"
 }
