--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
     "firebase": "^9.12.0",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "12.3.1",
