--- a/package.json
+++ b/package.json
@@ -6,29 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "cleanup": "rm -rf dist/; rm -rf node_modules/; rm -rf .next/",
     "export": "rm -rf dist/ && node ./scripts/pre-deploy.js && next build && next export -o dist/",
     "lint": "next lint"
   },
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
-    "firebase": "^9.12.0",
+    "firebase": "^9.13.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
-    "next": "12.3.1",
+    "next": "^12.3.2",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
     "@types/node": "18.8.4",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "prettier": "^2.7.1",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   }
 }
