--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-themes": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
