--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "eslint-config-next": "12.3.1",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
+  },
+  "engines": {
+    "node": ">=14 <15",
+    "pnpm": ">=7"
   }
 }
