--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
+    "@reduxjs/toolkit": "^1.9.0",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
@@ -21,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
