--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,11 @@
     "name": "Tadeas",
     "short_name": "Tadeas",
     "description": "A to-do list app by Teno Fdio Team",
+    "theme_color": "#000000",
+    "background_color": "#000000",
+    "display": "standalone",
+    "start_url": "./?utm_source=pwa_install",
+    "scope": ".",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
@@ -13,9 +18,5 @@
             "sizes": "512x512",
             "type": "image/png"
         }
-    ],
-    "theme_color": "#2c2131",
-    "background_color": "#2c2131",
-    "display": "standalone",
-    "scope": "/"
+    ]
 }
