--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,23 @@
 {
-    "name": "Tadeas",
-    "short_name": "Tadeas",
-    "description": "A to-do list app by Teno Fdio Team",
-    "theme_color": "#000000",
-    "background_color": "#000000",
-    "display": "standalone",
-    "start_url": "./?utm_source=pwa_install",
-    "scope": ".",
-    "icons": [
-        {
-            "src": "/android-chrome-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/android-chrome-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Tadeas",
+  "short_name": "Tadeas",
+  "description": "A to-do list app by Teno Fdio Team",
+  "theme_color": "#000000",
+  "background_color": "#000000",
+  "display": "minimal-ui",
+  "id": "/?source=pwa",
+  "start_url": "/?source=pwa",
+  "scope": "/",
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
