--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
       "source": "firebase-functions",
       "codebase": "default",
       "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log"],
-      "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint", "npm --prefix \"$RESOURCE_DIR\" run build"]
+      "predeploy": ["cd firebase-functions && pnpm build"]
     }
   ]
 }
