--- a/firebase-functions/package.json
+++ b/firebase-functions/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "functions",
+  "name": "tadeas-firebase-functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
-    "build:watch": "tsc --watch",
+    "dev": "tsc --watch",
+    "build": "pnpm lint && tsc",
     "serve": "pnpm run build && firebase emulators:start --only functions",
     "shell": "pnpm run build && firebase functions:shell",
     "start": "pnpm run shell",
@@ -15,8 +15,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-admin": "^11.2.1",
+    "firebase-functions": "^4.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -25,7 +25,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^0.2.0",
+    "firebase-functions-test": "^3.0.0",
     "typescript": "^4.5.4"
   },
   "private": true
