--- a/firebase-functions/tsconfig.json
+++ b/firebase-functions/tsconfig.json
@@ -4,6 +4,8 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "lib",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "target": "es2017"
