--- a/firebase-functions/package.json
+++ b/firebase-functions/package.json
@@ -15,12 +15,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "^11.2.1",
-    "firebase-functions": "^4.1.0"
+    "firebase-functions": "^4.1.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
