--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.1.3",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
