--- a/firebase-functions/package.json
+++ b/firebase-functions/package.json
@@ -18,10 +18,12 @@
     "cors": "^2.8.5",
     "firebase-admin": "^11.2.1",
     "firebase-functions": "^4.1.0",
+    "uuid": "^9.0.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.9.0",
