--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
