--- a/firebase-functions/package.json
+++ b/firebase-functions/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "firebase-admin": "^11.2.1",
     "firebase-functions": "^4.1.0",
+    "sib-api-v3-sdk": "^8.4.2",
     "uuid": "^9.0.0",
     "zod": "^3.19.1"
   },
