--- a/.gitignore
+++ b/.gitignore
@@ -20,18 +20,12 @@ tsconfig.tsbuildinfo
 /.firebase/
 
 # debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Logs
+**/*.log*
 
 # vercel
 .vercel
 
 # local env files
+.env
 .env.local
