--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.1.3",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
@@ -24,7 +25,8 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
