--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "cleanup": "rm -rf dist/; rm -rf node_modules/; rm -rf .next/",
     "build-prod": "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run export",
     "export": "rm -rf dist/ && node ./scripts/pre-deploy.js && next build && next export -o dist/",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
@@ -29,12 +31,18 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.3",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.8.4",
-    "@types/react": "^17.0.39",
+    "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.11",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
