--- a/migrations/package.json
+++ b/migrations/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase-admin": "^11.3.0"
+    "firebase-admin": "^11.3.0",
+    "lodash": "^4.17.21"
   }
 }
