--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "firebase-functions"]
+  "exclude": ["node_modules", "firebase-functions", "__tests__", "migrations"]
 }
