--- a/firebase-functions/.eslintrc
+++ b/firebase-functions/.eslintrc
@@ -26,6 +26,11 @@
     "import"
   ],
   "rules": {
-    "import/no-unresolved": 0
+    "import/no-unresolved": 0,
+    "require-jsdoc": 0,
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
+    "no-unused-expressions": "off",
+    "@typescript-eslint/no-unused-expressions": "warn"
   }
 }
