Moved firebase functions calls to the same place.

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,22 +1,23 @@
 **/*.svg
-package.json
+**/lib
+**/node_modules
+*.png
+*.toml
+.DS_Store
+.dockerignore
+.eslintcache
+.eslintignore
+.gitignore
+.history
+.prettierignore
+.swc
 /.firebase
 /.husky
 /.next
 /dist
-**/node_modules
-**/lib
 /public
-.dockerignore
-.DS_Store
-.eslintignore
-*.png
-*.toml
-docker
-Dockerfile*
-.gitignore
-.prettierignore
-.eslintcache
-yarn-error.log
-.history
 CNAME
+Dockerfile*
+docker
+package.json
+yarn-error.log
