Moved functions backend app

--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -4,6 +4,7 @@
     "lint": "eslint --ext .js,.ts .",
     "dev": "tsc --watch",
     "build": "rm -rf dist/ && pnpm lint && tsc",
+    "cleanup": "rm -rf lib/; rm -rf node_modules/",
     "serve": "pnpm run build && firebase emulators:start --only functions",
     "shell": "pnpm run build && firebase functions:shell",
     "start": "pnpm run shell",
