--- a/.prettierignore
+++ b/.prettierignore
@@ -1,23 +1,6 @@
 **/*.svg
-**/lib
+**/*.log
 **/node_modules
-*.png
-*.toml
-.DS_Store
-.dockerignore
-.eslintcache
-.eslintignore
-.gitignore
-.history
-.prettierignore
-.swc
-/.firebase
-/.husky
-/.next
-/dist
-/public
-CNAME
-Dockerfile*
-docker
-package.json
-yarn-error.log
+**/dist
+**/.next
+**/.swc
