--- a/apps/functions/.eslintrc
+++ b/apps/functions/.eslintrc
@@ -15,11 +15,11 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["tsconfig.json", "tsconfig.dev.json"],
+    "project": ["tsconfig.json"],
     "sourceType": "module"
   },
   "ignorePatterns": [
-    "/lib/**/*" // Ignore built files.
+    "/dist/**/*" // Ignore built files.
   ],
   "plugins": [
     "@typescript-eslint",
