--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -1,30 +1,30 @@
 {
   "name": "tadeas-firebase-functions",
+  "main": "dist/index.js",
+  "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "dev": "tsc --watch",
     "build": "rm -rf dist/ && pnpm lint && tsc",
-    "cleanup": "rm -rf lib/; rm -rf node_modules/",
+    "cleanup": "rm -rf dist/; rm -rf node_modules/",
     "serve": "pnpm run build && firebase emulators:start --only functions",
     "shell": "pnpm run build && firebase functions:shell",
     "start": "pnpm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "engines": {
-    "node": "14"
-  },
-  "main": "lib/index.js",
   "dependencies": {
     "cors": "^2.8.5",
     "firebase-admin": "^11.2.1",
     "firebase-functions": "^4.1.0",
+    "lodash": "^4.17.21",
     "sib-api-v3-sdk": "^8.4.2",
     "uuid": "^9.0.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/lodash": "^4.14.191",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.43.0",
@@ -35,5 +35,8 @@
     "firebase-functions-test": "^3.0.0",
     "typescript": "^4.5.4"
   },
-  "private": true
+  "engines": {
+    "node": "16",
+    "pnpm": ">=7"
+  }
 }
