--- a/apps/tadeas/package.json
+++ b/apps/tadeas/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tadeas",
+  "name": "tadeas-nextjs-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -47,7 +47,7 @@
     "typescript": "^4.8.4"
   },
   "engines": {
-    "node": ">=14 <15",
+    "node": "16",
     "pnpm": ">=7"
   }
 }
