--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,9 @@
 {
   "functions": [
     {
-      "source": "firebase-functions",
+      "source": "apps/functions",
       "codebase": "default",
-      "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log"],
-      "predeploy": ["cd firebase-functions && pnpm build"]
+      "predeploy": ["cd apps/functions && pnpm build"]
     }
   ]
 }
