--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "tadeas-firebase-functions",
-  "main": "dist/index.js",
+  "name": "@tadeas/functions",
+  "author": "Oliver Sosa",
+  "license": "ISC",
   "private": true,
+  "main": "dist/index.js",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "dev": "tsc --watch",
