--- a/apps/tadeas/package.json
+++ b/apps/tadeas/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "tadeas-nextjs-app",
+  "name": "@tadeas/webapp",
   "version": "0.1.0",
+  "author": "Oliver Sosa",
+  "license": "ISC",
   "private": true,
   "scripts": {
     "dev": "next dev",
