--- a/tools/migrations/package.json
+++ b/tools/migrations/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "migrations",
+  "name": "@tadeas/migrations",
   "version": "1.0.0",
-  "description": "",
+  "author": "Oliver Sosa",
+  "license": "ISC",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "execute": "./node_modules/.bin/ts-node",
     "cleanup": "rm -rf node_modules/"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "firebase-admin": "^11.3.0",
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
-  },
-  "dependencies": {
-    "firebase-admin": "^11.3.0",
-    "lodash": "^4.17.21"
   }
 }
