--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint --ext .js,.ts .",
     "dev": "tsc --watch",
     "build": "rm -rf dist/ && pnpm lint && tsc",
-    "cleanup": "rm -rf dist/; rm -rf node_modules/",
+    "cleanup": "rm -rf dist/; rm -rf node_modules/; rm -rf .turbo/",
     "serve": "pnpm run build && firebase emulators:start --only functions",
     "shell": "pnpm run build && firebase functions:shell",
     "start": "pnpm run shell",
