--- a/turbo.json
+++ b/turbo.json
@@ -3,12 +3,12 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**"]
+      "outputs": [".next/**", "dist/**"]
     },
     "test": {
       "dependsOn": ["build"],
       "outputs": [],
-      "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
+      "inputs": ["src/**/*.test.ts"]
     },
     "lint": {
       "outputs": []
@@ -19,6 +19,12 @@
     "deploy": {
       "dependsOn": ["build", "test", "lint"],
       "outputs": []
+    },
+    "@tadeas/webapp#dev": {
+      "outputs": [".next/**"]
+    },
+    "@tadeas/functions#dev": {
+      "outputs": ["dist/**"]
     }
   }
 }
