--- a/apps/functions/.eslintrc
+++ b/apps/functions/.eslintrc
@@ -19,7 +19,8 @@
     "sourceType": "module"
   },
   "ignorePatterns": [
-    "/dist/**/*" // Ignore built files.
+    "/dist/**/*", // Ignore built files.
+    "jest.config.js"
   ],
   "plugins": [
     "@typescript-eslint",
