--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -10,7 +10,8 @@
     "build": "tsc --build",
     "cleanup": "rm -rf dist/; rm -rf node_modules/; rm -rf .turbo/",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/jest": "^29.2.3",
     "@types/lodash": "^4.14.191",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -32,6 +34,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.0.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.5.4"
   },
   "engines": {
