--- a/apps/tadeas/package.json
+++ b/apps/tadeas/package.json
@@ -12,8 +12,7 @@
     "build-prod": "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run export",
     "export": "rm -rf dist/ && node ./scripts/pre-deploy.js && next build && next export -o dist/",
     "lint": "next lint",
-    "test": "jest",
-    "test:ci": "jest --ci"
+    "test": "jest"
   },
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
