--- a/turbo.json
+++ b/turbo.json
@@ -19,11 +19,8 @@
       "dependsOn": ["build", "test", "lint"],
       "outputs": []
     },
-    "@tadeas/webapp#dev": {
-      "outputs": [".next/**"]
-    },
-    "@tadeas/functions#dev": {
-      "outputs": ["dist/**"]
+    "dev": {
+      "cache": false
     }
   }
 }
