--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -14,8 +14,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tadeas/firestore-converters": "workspace:1.0.0",
     "cors": "^2.8.5",
-    "firebase-admin": "^11.2.1",
+    "firebase-admin": "^11.3.0",
     "firebase-functions": "^4.1.0",
     "lodash": "^4.17.21",
     "sib-api-v3-sdk": "^8.4.2",
@@ -29,14 +30,14 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.9.0",
+    "eslint": "8.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.0.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.5.4"
+    "typescript": "^4.9.3"
   },
   "engines": {
     "node": "16",
