--- a/apps/tadeas/package.json
+++ b/apps/tadeas/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.9.0",
+    "@tadeas/firestore-converters": "workspace:1.0.0",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
@@ -36,16 +37,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.3",
-    "@types/lodash": "^4.14.186",
-    "@types/node": "18.8.4",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.9",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.11",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "next-transpile-modules": "^10.0.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "engines": {
     "node": "16",
