--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:be": "turbo run dev --filter=@tadeas/functions",
     "deploy:be": "turbo run deploy --filter=@tadeas/functions"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@manypkg/cli": "^0.19.2",
     "prettier": "^2.7.1",
     "turbo": "^1.6.3"
   }
