--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -14,7 +14,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@tadeas/firestore-converters": "workspace:1.0.0",
+    "@tadeas/firestore-converters": "workspace:*",
     "cors": "^2.8.5",
     "firebase-admin": "^11.3.0",
     "firebase-functions": "^4.1.0",
