--- a/apps/tadeas/package.json
+++ b/apps/tadeas/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.9.0",
-    "@tadeas/firestore-converters": "workspace:1.0.0",
+    "@tadeas/firestore-converters": "workspace:*",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
