--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "lint": "turbo run lint",
     "dev:fe": "turbo run dev --filter=@tadeas/webapp",
     "dev:be": "turbo run dev --filter=@tadeas/functions",
-    "deploy:fe": "turbo run deploy --filter=@tadeas/webapp",
+    "export:fe": "turbo run export --filter=@tadeas/webapp",
     "deploy:be": "turbo run deploy --filter=@tadeas/functions"
   },
   "dependencies": {
     "@manypkg/cli": "^0.19.2",
     "prettier": "^2.7.1",
-    "turbo": "^1.6.3"
+    "turbo": "^1.6.3",
+    "wrangler": "^2.6.1"
   }
 }
