--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Setup PNPM
         uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7.3.0
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
