--- a/packages/firestore-converters/package.json
+++ b/packages/firestore-converters/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "author": "Oliver Sosa",
   "license": "ISC",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "cleanup": "rm -rf node_modules/"
+    "cleanup": "rm -rf node_modules/",
+    "dev": "tsup src/index.ts --watch --dts --sourcemap",
+    "build": "tsup src/index.ts --dts --sourcemap"
   },
   "devDependencies": {
+    "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
 }
