--- a/turbo.json
+++ b/turbo.json
@@ -19,7 +19,8 @@
       "outputs": []
     },
     "dev": {
-      "cache": false
+      "dependsOn": ["^dev"],
+      "outputs": [".next/**", "dist/**"]
     }
   }
 }
