--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tadeas/firestore-converters": "workspace:*",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "firebase-admin": "^11.3.0",
     "firebase-functions": "^4.1.0",
     "lodash": "^4.17.21",
