--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -7,7 +7,7 @@
   "types": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "cleanup": "rm -rf node_modules/"
+    "cleanup": "rm -rf node_modules/; rm -rf dist/; rm -rf .turbo/"
   },
   "devDependencies": {
     "typescript": "^4.9.3"
