--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,7 @@
       "outputs": [".next/**", "dist/**"]
     },
     "test": {
+      "dependsOn": ["build"],
       "inputs": ["src/**/*.ts"]
     },
     "lint": {
