--- a/.github/workflows/build-and-test-all.yml
+++ b/.github/workflows/build-and-test-all.yml
@@ -1,11 +1,8 @@
 name: 'Build and Test All'
 
 on:
-#  TODO CHANGE BACK
-#  pull_request:
-#    types: [opened, synchronize]
-  push:
-    branches: ["main"]
+  pull_request:
+    types: [opened, synchronize]
 
 env:
   SENDINGBLUE_API_KEY: ${{ secrets.SENDINGBLUE_API_KEY }}
