Fixing monorepo configuration  (#42)
* Moved some doc about authentication process out of code to a readme file in backend

* Added tsup as TS builer for backend and packages

* Removed next-transpile-modules, not needed anymore because we are importing our packages as js already.

* Testing packages imported in backend

* Fixed turbo scripts

* Added dotenv in backend

* Removing old env configuration

* Minor fix on tirbo config

* Included test workflow

* Fixed turbo test task, included build as dependency

* Including env variables in test workflow

* Minor changes in workflow

* Testing script in workflow

* Testing script in workflow

* Testing workflow

--- a/.github/workflows/build-and-test-all.yml
+++ b/.github/workflows/build-and-test-all.yml
@@ -1,8 +1,8 @@
-name: 'Deploy Web App'
+name: 'Build and Test All'
 
 on:
-  push:
-    branches: ["main"]
+  pull_request:
+    types: [opened, synchronize]
 
 env:
   SENDINGBLUE_API_KEY: ${{ secrets.SENDINGBLUE_API_KEY }}
@@ -26,7 +26,7 @@ env:
 
 jobs:
   deploy:
-    name: 'Deploy Web App to Cloudinary'
+    name: 'Build and Test every app and package'
     timeout-minutes: 15
     runs-on: ubuntu-latest
 
