--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -6,8 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "dev": "tsc --watch --preserveWatchOutput & firebase emulators:start --only functions",
-    "build": "tsc --build",
+    "dev": "tsup src/index.ts --format cjs --sourcemap --watch & firebase emulators:start --only functions",
+    "build": "tsup src/index.ts --format cjs --sourcemap",
     "cleanup": "rm -rf dist/; rm -rf node_modules/; rm -rf .turbo/",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tadeas/firestore-converters": "workspace:*",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "firebase-admin": "^11.3.0",
     "firebase-functions": "^4.1.0",
     "lodash": "^4.17.21",
@@ -37,6 +38,7 @@
     "firebase-functions-test": "^3.0.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
+    "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   },
   "engines": {
