--- a/apps/tadeas/package.json
+++ b/apps/tadeas/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "cleanup": "rm -rf dist/; rm -rf node_modules/; rm -rf .next/; rm -rf .swc/; rm -rf .turbo/",
-    "export": "node ./scripts/pre-deploy.js && next build && next export -o dist/",
+    "export": "node ./scripts/pre-deploy.js && next export -o dist/",
+    "deploy": "echo \"Deploy defined in github workflow\" && exit 0",
     "lint": "next lint",
     "test": "jest"
   },
