--- a/turbo.json
+++ b/turbo.json
@@ -16,8 +16,11 @@
       "outputs": []
     },
     "deploy": {
-      "dependsOn": ["build", "test", "lint"],
+      "dependsOn": ["build", "lint", "test"],
       "outputs": []
+    },
+    "export": {
+      "dependsOn": ["build", "lint", "test"]
     },
     "dev": {
       "dependsOn": ["^dev"],
