Updated deploy web app workflow to run only on changes on frontend or it's dependencies

--- a/.github/workflows/deploy-webapp.yml
+++ b/.github/workflows/deploy-webapp.yml
@@ -2,7 +2,12 @@ name: 'Deploy Web App'
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
+    paths:
+      - 'apps/tadeas/**'
+      - 'packages/firestore-converters/**'
+      - 'packages/types/**'
 
 jobs:
   deploy:
