--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:fe": "turbo run dev --filter=@tadeas/webapp... --parallel",
     "dev:be": "turbo run dev --filter=@tadeas/functions... --parallel",
     "export:fe": "turbo run export --filter=@tadeas/webapp...",
-    "deploy:be": "turbo run deploy --filter=@tadeas/functions..."
+    "export:be": "turbo run export --filter=@tadeas/functions..."
   },
   "dependencies": {
     "@manypkg/cli": "^0.19.2",
