--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tadeas/firestore-converters": "workspace:*",
+    "@tadeas/types": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "firebase-admin": "^11.3.0",
