--- a/apps/tadeas/package.json
+++ b/apps/tadeas/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/react": "1.0.0-beta.10",
     "@reduxjs/toolkit": "^1.9.0",
     "@tadeas/firestore-converters": "workspace:*",
+    "@tadeas/types": "workspace:*",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
@@ -41,8 +42,13 @@
     "@types/node": "^18.11.9",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.7.1",
