Fixed issue with backend deploying

--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["es2021"],
@@ -10,6 +11,11 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2021",
+    "paths": {
+      "@tadeas/firestore-converters": ["../../../packages/firestore-converters/src/index.ts"],
+      "@tadeas/types": ["../../../packages/types/src/index.ts"],
+      "@/*": ["./*"]
+    }
   },
   "compileOnSave": true,
   "include": [
