--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -5,17 +5,15 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
-    "dev": "tsup src/index.ts --format cjs --sourcemap --watch & firebase emulators:start --only functions",
     "build": "tsup src/index.ts --format cjs --sourcemap",
     "cleanup": "rm -rf dist/; rm -rf node_modules/; rm -rf .turbo/",
-    "deploy": "echo \"Deploy defined in github workflow\" && exit 0",
+    "deploy": "firebase deploy --only functions",
+    "dev": "concurrently \"firebase emulators:start --only functions\" \"tsup src/index.ts --format cjs --sourcemap --watch\"",
+    "lint": "eslint --ext .js,.ts .",
     "logs": "firebase functions:log",
     "test": "jest"
   },
   "dependencies": {
-    "@tadeas/firestore-converters": "workspace:*",
-    "@tadeas/types": "workspace:*",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "firebase-admin": "^11.3.0",
@@ -32,6 +30,7 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "concurrently": "^7.6.0",
     "eslint": "8.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
