--- a/packages/firestore-converters/package.json
+++ b/packages/firestore-converters/package.json
@@ -12,7 +12,11 @@
     "build": "tsup src/index.ts --dts --sourcemap"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
