--- a/apps/functions/.env.dist
+++ b/apps/functions/.env.dist
@@ -1,12 +1,3 @@
 # Firebase project -> Project Settings -> Service accounts -> Firebase Admin SDK -> Generate new private key
-SERVICE_ACCOUNT_TYPE=
-SERVICE_ACCOUNT_PROJECT_ID=
-SERVICE_ACCOUNT_PRIVATE_KEY_ID=
-SERVICE_ACCOUNT_PRIVATE_KEY=
-SERVICE_ACCOUNT_CLIENT_EMAIL=
-SERVICE_ACCOUNT_CLIENT_ID=
-SERVICE_ACCOUNT_AUTH_URI=
-SERVICE_ACCOUNT_TOKEN_URI=
-SERVICE_ACCOUNT_AUTH_PROVIDER_X509_CERT_URL=
-SERVICE_ACCOUNT_CLIENT_X509_CERT_URL=
 SENDINGBLUE_API_KEY=
+GCP_SA_KEY=
