--- a/apps/tadeas/.env.dist
+++ b/apps/tadeas/.env.dist
@@ -1,8 +1,5 @@
-NEXT_PUBLIC_FIREBASE_FUNCTIONS_BASE_PATH=''
+CLOUDFLARE_ACCOUNT_ID=''
+CLOUDFLARE_API_TOKEN=''
 # Firebase project -> Project Settings -> General -> Your apps section
-NEXT_PUBLIC_FIREBASE_API_KEY=''
-NEXT_PUBLIC_FIREBASE_APP_ID=''
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=''
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=''
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=''
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=''
+NEXT_PUBLIC_FIREBASE_CONFIG=''
+NEXT_PUBLIC_FIREBASE_FUNCTIONS_BASE_PATH=''
