--- a/.github/workflows/generate-diff-map.yml
+++ b/.github/workflows/generate-diff-map.yml
@@ -17,6 +17,7 @@ jobs:
         uses: cundejo/diff-map@v1.0
         with:
           who-to-greet: 'Oliver Sosa Cano'
+          token: ${{ secrets.GITHUB_TOKEN }}
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
