Testing diff-map action

--- a/.github/workflows/build-and-test-all.yml
+++ b/.github/workflows/build-and-test-all.yml
@@ -2,6 +2,9 @@ name: Build and Test All
 
 on:
   pull_request:
+    # TODO change back to main
+    branches:
+      - mainZZZZ
     types: [opened, synchronize]
 
 env:
